--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,12 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <jackson.version>2.7.4</jackson.version>
     </properties>
-
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
     <build>
         <plugins>
 			<plugin>
@@ -41,6 +46,11 @@
     </build>
     
     <dependencies>
+    		<dependency>
+			<groupId>com.github.davidesner</groupId>
+			<artifactId>keboola-components-lib</artifactId>
+			<version>v1.0.7</version>
+		</dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
