--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,19 @@
 	</build>
 
 	<dependencies>
+
+  <dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-api</artifactId>
+    <version>2.13.0</version>
+  </dependency>
+  <dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.13.0</version>
+  </dependency>
+
+
 		<dependency>
 			<groupId>com.github.davidesner</groupId>
 			<artifactId>keboola-components-lib</artifactId>
